[gd_scene load_steps=3 format=3 uid="uid://ddxr40xsrlu2e"]

[ext_resource type="Script" uid="uid://bj86w42q830hx" path="res://Autoloads/debug_console.gd" id="1_yghne"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g1xkc"]
bg_color = Color(0, 0, 0, 0.698039)

[node name="DebugConsole" type="CanvasLayer"]
process_mode = 3
layer = 128
visible = false
script = ExtResource("1_yghne")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_g1xkc")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="MainLayout" type="HBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="LeftColumn" type="VBoxContainer" parent="Panel/MarginContainer/MainLayout"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="DebugInfoText" type="RichTextLabel" parent="Panel/MarginContainer/MainLayout/LeftColumn"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "Debug Info..."
fit_content = true

[node name="VSeparator" type="VSeparator" parent="Panel/MarginContainer/MainLayout"]
layout_mode = 2

[node name="RightColumn" type="VBoxContainer" parent="Panel/MarginContainer/MainLayout"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/MarginContainer/MainLayout/RightColumn"]
layout_mode = 2
text = "Log de Eventos Globais"

[node name="LogText" type="RichTextLabel" parent="Panel/MarginContainer/MainLayout/RightColumn"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "Debug Console Initialized."
scroll_following = true
